fix videos for other alignments

--- a/source/_docs/patterns/06-helpers/_align.scss
+++ b/source/_docs/patterns/06-helpers/_align.scss
@@ -42,6 +42,12 @@ For adjusting alignments.
     display: block;
     width: 100%;
   }
+  iframe {
+    aspect-ratio: 16 / 9;
+
+    width: 100%;
+    height: auto;
+  }
 }
 .media-stretch {
   display: grid;
@@ -74,6 +80,12 @@ For adjusting alignments.
     justify-self: end;
     width: 100%;
   }
+  iframe {
+    aspect-ratio: 16 / 9;
+
+    width: 100%;
+    height: auto;
+  }
 }
 .media-align-right {
   display: grid;
@@ -90,5 +102,11 @@ For adjusting alignments.
   img {
     display: block;
     width: 100%;
+  }
+  iframe {
+    aspect-ratio: 16 / 9;
+
+    width: 100%;
+    height: auto;
   }
 }
